[Newsletter] Adjust the tl_newsletter.xlf file.

--- a/newsletter-bundle/src/Resources/contao/languages/en/tl_newsletter.xlf
+++ b/newsletter-bundle/src/Resources/contao/languages/en/tl_newsletter.xlf
@@ -84,7 +84,7 @@
         <source>Offset</source>
       </trans-unit>
       <trans-unit id="tl_newsletter.start.1">
-        <source>In case the sending process is interrupted, you can enter a numeric offset here to continue with a particular recipient. You can check how many mails have been sent in the &lt;em&gt;system/logs/newsletter_*.log&lt;/em&gt; file. E.g., if 120 mails have been sent, enter "120" to continue with the 121st recipient (counting starts at 0).</source>
+        <source>In case the sending process is interrupted, you can enter a numeric offset here to continue with a particular recipient. You can check how many mails have been sent in the &lt;em&gt;app/logs/newsletter_*.log&lt;/em&gt; file. E.g., if 120 mails have been sent, enter "120" to continue with the 121st recipient (counting starts at 0).</source>
       </trans-unit>
       <trans-unit id="tl_newsletter.sendPreviewTo.0">
         <source>Send preview to</source>
