--- a/comments-bundle/src/Resources/contao/languages/en/default.xlf
+++ b/comments-bundle/src/Resources/contao/languages/en/default.xlf
@@ -49,8 +49,10 @@
 
 View: %s
 Edit: %s
-
-If you are moderating comments, you have to log in to the back end to publish it.</source>
+</source>
+      </trans-unit>
+      <trans-unit id="MSC.com_moderated">
+        <source>This comment has to be published in the back end before it will appear on the website!</source>
       </trans-unit>
       <trans-unit id="MSC.com_confirm">
         <source>Your comment has been added and is now pending for approval.</source>
