--- a/core-bundle/src/Resources/contao/languages/en/tl_files.xlf
+++ b/core-bundle/src/Resources/contao/languages/en/tl_files.xlf
@@ -8,6 +8,18 @@
       <trans-unit id="tl_files.name.1">
         <source>Contao automatically adds the file extension.</source>
       </trans-unit>
+      <trans-unit id="tl_files.path.0">
+        <source>Path</source>
+      </trans-unit>
+      <trans-unit id="tl_files.path.1">
+        <source>The relative path to the file or folder.</source>
+      </trans-unit>
+      <trans-unit id="tl_files.extension.0">
+        <source>Extension</source>
+      </trans-unit>
+      <trans-unit id="tl_files.extension.1">
+        <source>The file extension</source>
+      </trans-unit>
       <trans-unit id="tl_files.protected.0">
         <source>Public</source>
       </trans-unit>
